Add logback logging